# ResistenciasFin

./: CMakeLists.txt  Iniciar_Bandas.cpp  Iniciar_Bandas.h  Iniciar_BandasT.cpp  Iniciar_BandasT.h  MainWindow.ui  Mainwindow.cpp  Mainwindow.h  Resistencias.cpp  Resistencias.h  Resistencias.ui  Resistencias2.cpp  Resistencias2.h  Resistencias2.ui  Resistencias_es_MX.ts  Trabajo_Bandas.cpp  Trabajo_Bandas.h  Trabajo_Bandas2.cpp  Trabajo_Bandas2.h  leyohm.cpp  leyohm.h  leyohm.ui  main.cpp
